src/components/FilterPopup/FilterPopup.module.scss
.filter {
  position: relative;
  background-color: #fff;
  padding: 12px 20px;
  box-shadow: 0px 0px 10px rgba(151, 151, 151, 0.16);
  width: 15%;
  border-radius: 5px;
  font-size: 14px;
  cursor: pointer;

  & .title {
    display: flex;
    align-items: center;
    justify-content: space-between;

    & svg {
      margin-left: 20px;
      transform: scale(0.8);
      transition: transform 0.3s ease-in-out;
      &.rotated {
        transform: rotate(180deg);
      }
    }
  }

  & .popup {
    position: absolute;
    // display: flex;
    // flex-direction: column;
    // row-gap: 20px;
    left: 0;
    top: 110%;
    background-color: #fff;
    box-shadow: 0px 0px 10px rgba(38, 38, 38, 0.16);
    border-radius: 5px;
    width: 100%;
    padding: 6px 0;

    & .active {
      font-weight: 700;
    }

    & li {
      padding: 6px 20px;
      transition: background-color 0.3s ease-in-out;

      &:hover {
        background-color: #eeeeee;
      }
    }
  }
}

